force-app/main/default/objects/Integration_PH_Update_Patient_Status__c/Integration_PH_Update_Patient_Status__c.object-meta.xml
<CustomObject>
    <label>Integration PH Update Patient Status</label>
    <nameField>
        <label>Integration_PH_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration PH Update Patient Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>