force-app/main/default/objects/Integration_PH_Update_Patient_Status__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>