force-app/main/default/objects/Integration_PH_Update_Patient_Status__c/fields/Protocol_ID__c.field-meta.xml
<CustomField>
    <fullName>Protocol_ID__c</fullName>
    <label>Protocol ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>