force-app/main/default/objects/Integration_PH_Update_Patient_Status__c/fields/PSE_Status__c.field-meta.xml
<CustomField>
    <fullName>PSE_Status__c</fullName>
    <label>PSE Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>