force-app/main/default/objects/Integration_PH_Update_Patient_Status__c/fields/Study_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Number__c</fullName>
    <label>Study Site Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>